# ads-bazaar-contract

./: .env.example  .gitignore  Cargo.toml  README.md  deploy.sh
contracts/campaign-escrow/src/: error.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/dispute-resolution/: Cargo.toml
contracts/dispute-resolution/src/: error.rs  escrow.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/shared/src/: lib.rs
docs/: ARCHITECTURE.md
