[workspace]
resolver = "2"
members = [
    "contracts/shared",
    "contracts/campaign-escrow",
    "contracts/dispute-resolution",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ads-bazaar/ads-bazaar-contract"

[workspace.dependencies]
soroban-sdk = "27.0.0"
ads-bazaar-shared = { path = "contracts/shared" }
ads-bazaar-campaign-escrow = { path = "contracts/campaign-escrow" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
