[package]
name = "ads-bazaar-dispute-resolution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Dispute arbitration contract for contested campaign-escrow payouts"

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
ads-bazaar-shared = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
# Dev-only on purpose: tests register a real campaign-escrow contract to
# exercise the cross-contract calls in `raise_dispute`. A regular dependency
# would link escrow's contract exports into this contract's wasm — see
# `src/escrow.rs` for why the client is declared by hand instead.
ads-bazaar-campaign-escrow = { workspace = true, features = ["testutils"] }
